--- a/views/home.html
+++ b/views/home.html
@@ -61,7 +61,7 @@
     <div class="col-md-6">
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.507810587561!2d78.4833948!3d17.5309934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb8545a82fc7f5%3A0x60e26deed48223e8!2sKVR+Gardens!5e0!3m2!1sen!2sin!4v1518765038275" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
     -->
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3844.8000419573414!2d80.04584631422755!3d15.495184158682404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4b0101128c8b6f%3A0xc289c399ce3df107!2sHotel+Sarovar!5e0!3m2!1sen!2sin!4v1524596558287" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3844.8000419573414!2d80.04584631422755!3d15.495184158682404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4b0101128c8b6f%3A0xc289c399ce3df107!2sHotel+Sarovar!5e0!3m2!1sen!2sin!4v1524596558287" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div> 
     <div class="col-md-6">
       <div class="address-area">
